crates/ir/tests/ir/snapshots/main__ir__lower__modules__bare_import.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module modules__bare_import

extern java "krypton.runtime.KryptonIO" println(x10) -> Unit
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import helpers_a/compute as __qual$helpers_a$compute(Int) -> Int
declare __qual$helpers_a$compute: (Int) -> Int
declare println: (x10) -> Unit

fn main() -> Unit =
  let v0: Int = neg_int(5)
  let v1: Int = call __qual$helpers_a$compute(v0)
  let v2: Unit = call println(v1)
  v2
