crates/ir/tests/ir/snapshots/main__ir__lower__modules__constrained_ref_cross_module_apply.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module modules__constrained_ref_cross_module_apply

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/io/println as println(g) -> Unit
import constrained_ref_hof/apply_to_int as apply_to_int((Int) -> String, Int) -> String
import constrained_ref_lib/render_it as render_it(k11) -> String
declare apply_to_int: ((Int) -> String, Int) -> String
declare println: (g) -> Unit
declare render_it: (k11) -> String

fn main() -> Unit =
  let v1: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v0: (Int) -> String = make_closure(fn_ref$28, [v1])
  let_join v11(v9: Bool) =
    let v5: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
    let v10: Unit = call println(v5, v9)
    v10
  in
  let v6: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v7: String = call apply_to_int(v0, 42)
  let v8: Bool = trait_call core/eq.Eq.eq(v6, v7, "42")
  jump v11(v8)

fn fn_ref$28(v2: Dict[core/show.Show, Int], v3: Int) -> String =
  let v4: String = call render_it(v2, v3)
  v4
