crates/ir/tests/ir/snapshots/main__ir__lower__modules__constructor_fn_name_collision.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module modules__constructor_fn_name_collision

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/io/println as println(g) -> Unit
import constructor_fn_name_collision_lib/Wrap as Wrap(Int) -> Wrapper
import constructor_fn_name_collision_lib/Wrap_value as Wrap_value(Wrapper) -> Int
declare Wrap_value: (Wrapper) -> Int
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: Wrapper = construct Wrapper::Wrap#0(7)
  let v2: Int = call Wrap_value(v1)
  let v0: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v3: Unit = call println(v0, v2)
  v3
