crates/ir/tests/ir/snapshots/main__ir__lower__modules__cross_module_same_variant.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module modules__cross_module_same_variant

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[p8]) -> List[p8]
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/io/println as println(g) -> Unit
import cross_module_same_variant_a/Num as Num(Int) -> Value
import cross_module_same_variant_a/Str as Str(String) -> Value
declare println: (g) -> Unit

fn extract(v0: Value) -> Int =
  switch v0 {
    0 (v1: Int) ->
      v1
    1 (v2: String) ->
      0
  }

fn main() -> Unit =
  let v4: Value = construct Value::Num#0(42)
  let v5: Int = call extract(v4)
  let v3: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v6: Unit = call println(v3, v5)
  v6
