crates/ir/tests/ir/snapshots/main__ir__lower__modules__facade_overload_consumer.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module modules__facade_overload_consumer

import core/peek/peek as peek(e) -> e
import core/list/last as last(List[q3]) -> Option[q3]
import core/list/sort_by as sort_by(List[v5], (v5) -> k5) -> List[v5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[y7]) -> List[y7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
import vec_mod/length as length(Vec[Int]) -> Int
import list_mod/length as length(List[Int]) -> Int
declare length: (List[Int]) -> Int

fn use_vec(v0: Vec[Int]) -> Int =
  let v1: Int = call length(v0)
  v1

fn use_list(v2: List[Int]) -> Int =
  let v3: Int = call length(v2)
  v3
