crates/ir/tests/ir/snapshots/main__ir__lower__modules__import_aliases.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module modules__import_aliases

extern java "krypton.runtime.KryptonIO" println(x7) -> Unit
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[p3]) -> Option[p3]
import core/list/sort_by as sort_by(List[u5], (u5) -> j5) -> List[u5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], u1, (u1, s1) -> u1) -> u1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[w7]) -> List[w7]
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import helpers_a/compute as magnitude(Int) -> Int
declare magnitude: (Int) -> Int
declare println: (x7) -> Unit

fn keep(v0: Option[Int]) -> Int =
  0

fn main() -> Unit =
  let v1: Int = call magnitude(0)
  let v2: Option[Int] = construct Option::None#1()
  let v3: Int = call keep(v2)
  let v4: Int = add_int(v1, v3)
  let v5: Unit = call println(v4)
  v5
